* #2190687: When saving a block, if $options was a multi-levels array, StopXSS was failing to save array. StopXSS is now recursive and will all levels of $text parameter if it's an array (malanciault)
* #2192679: Leading space in cache/index.html (dave_l)
* Fixed issues with spambots. (Frederick/stranger)
* Fixed issues multiple time stamps. (Frederick/stranger)

'''Added'''
* Stop Spam Registration class and its experimental use in extra/anti-spam/register.php (stranger/malanciault)

===2008-10-17 : 1.1 RC 3===

'''Added'''
* Converter of 2.2.X to icms 1.0 then 1.1 (stranger/phppp)
* Converter of 2.3.X to icms 1.0 then 1.1 (stranger)
* TRUST_PATH to upgarder. (stranger)
* a checker to see if TRUST_PATH exists in adminmenu, if it doesn't it will prompt admins from accessing admin menu. (stranger)
* a checker to see if email address already exists in adminmenu. (stranger)

'''Improved'''
* Updated system to version 1.10. (stranger)
* Function icms_cleaning_write_folders. (stranger)
* Query execution during character set conversion

'''Fixed'''
* Issues with editors: switch from dhtml < > TinyMCE (sato-san)
* Issues with google analytic textform in admin menu. (stranger)
* Issues with Jalalijscalendar option in admin menu. (stranger)
* Issues with new templates not being inserted in system module. (stranger)
* Issues with Jalalijscalendar option in Persian language. (stranger)
* Issues with reset buttons. (mcdonald3072)
* When converting the db to another character set during an upgrade, the default values were being dropped if they were empty strings (skenow)
* Issues with Jalalijscalendar button in forms. (stranger)
* Issue with upgrader, blocks got twice inserted. (stranger)
* Issue with upgrader, blocks permissions were not inserted. (skenow/stranger)
* Issue with upgrader, system sub-module permissions were not inserted. (stranger)
* Issue with theme_rtl. (stranger)
* Issue with <{if $xoops_contents}>. (Vaughan/Trabis)